panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_argc.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_argc.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn(argc: int, ∅: ptr<ptr<char>>) -> int`
      (params
         argc~1 `int`
         main.unnamed_parameter.1~2 `ptr<ptr<char>>`)
      (compound-statement
         (return (argc~1 `int`)))))

----- stderr -----
