panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_ptr_addressof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_addressof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition i1~1 `int` (42 `int`))
         (definition i2~2 `int` (27 `int`))
         (definition p1~3 `ptr<int>`
            (addressof `ptr<int>`
               (i1~1 `int`)))
         (definition p2~4 `ptr<int>`
            (addressof `ptr<int>`
               (i2~2 `int`)))
         (return
            (add `int`
               (add `int`
                  (add `int`
                     (ptr-equal `int` `int` (p1~3 `ptr<int>`)
                        (addressof `ptr<int>`
                           (i1~1 `int`)))
                     (ptr-equal `int` `int` (p2~4 `ptr<int>`)
                        (addressof `ptr<int>`
                           (i2~2 `int`))))
                  (ptr-equal `int` `int` (ptr-add `ptr<int>` (p1~3 `ptr<int>`) (sign-extend `unsigned long` (1 `int`))) (p2~4 `ptr<int>`)))
               (ptr-equal `int` `int` (ptr-sub `ptr<int>` (p2~4 `ptr<int>`) (sign-extend `unsigned long` (1 `int`))) (p1~3 `ptr<int>`)))))))

----- stderr -----
