panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_ptr_deref_assign.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_deref_assign.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition x~1 `long` (sign-extend `long` (42 `int`)))
         (definition p~2 `ptr<long>`
            (addressof `ptr<long>`
               (x~1 `long`)))
         (definition pp~3 `ptr<ptr<long>>`
            (addressof `ptr<ptr<long>>`
               (p~2 `ptr<long>`)))
         (expression (assign `long` (deref `long` (deref `ptr<long>` (pp~3 `ptr<ptr<long>>`))) (sign-extend `long` (27 `int`))))
         (return (truncate `int` (x~1 `long`))))))

----- stderr -----
