panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_ptr_equality.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_equality.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition p1~1 `ptr<long>` ∅)
         (definition b~2 `unsigned long long` (sign-extend `unsigned long long` (42 `int`)))
         (definition p2~3 `ptr<long>` (ptr-add `ptr<long>` (noop-type-conversion `unsigned long` (b~2 `unsigned long long`)) (p1~1 `ptr<long>`)))
         (definition p3~4 `ptr<long>` (ptr-sub `ptr<long>` (p2~3 `ptr<long>`) (noop-type-conversion `unsigned long` (b~2 `unsigned long long`))))
         (return (ptr-equal `int` (p3~4 `ptr<long>`) (p1~1 `ptr<long>`))))))

----- stderr -----
