panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_return_without_expr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_return_without_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration exit~0 `fn(∅: int) -> void` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (return ∅)
         (expression
            (call `void`
               (addressof `ptr<fn(∅: int) -> void>`
                  (exit~0 `fn(∅: int) -> void`))
               (42 `int`)))))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`)))))))

----- stderr -----
