panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_zero_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_zero_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`
      (params
         argv~2 `ptr<ptr<char>>`
         l~3 `unsigned long`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` `ptr<ptr<char>>` (argv~2 `ptr<ptr<char>>`) (sign-extend `unsigned long` (1 `int`)))))
               (l~3 `unsigned long`)))))
   (function-definition
      main~4 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~5 `int`
         argv~6 `ptr<ptr<char>>`)
      (compound-statement
         (compound-statement
            (definition c~7 `unsigned char` (truncate `unsigned char` (42 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (c~7 `unsigned char`))))
            (definition s~8 `unsigned short` (zero-extend `unsigned short` (c~7 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (s~8 `unsigned short`))))
            (definition i~9 `unsigned int` (zero-extend `unsigned int` (c~7 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (i~9 `unsigned int`))))
            (definition j~10 `unsigned int` (zero-extend `unsigned int` (s~8 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (j~10 `unsigned int`))))
            (definition l~11 `unsigned long` (zero-extend `unsigned long` (c~7 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (l~11 `unsigned long`)))
            (definition m~12 `unsigned long` (zero-extend `unsigned long` (s~8 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (m~12 `unsigned long`)))
            (definition n~13 `unsigned long` (zero-extend `unsigned long` (i~9 `unsigned int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (n~13 `unsigned long`))))
         (compound-statement
            (definition c~14 `unsigned char` (truncate `unsigned char` (250 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (c~14 `unsigned char`))))
            (definition s~15 `unsigned short` (zero-extend `unsigned short` (c~14 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (s~15 `unsigned short`))))
            (definition i~16 `unsigned int` (zero-extend `unsigned int` (c~14 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (i~16 `unsigned int`))))
            (definition j~17 `unsigned int` (zero-extend `unsigned int` (s~15 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (j~17 `unsigned int`))))
            (definition l~18 `unsigned long` (zero-extend `unsigned long` (c~14 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (l~18 `unsigned long`)))
            (definition m~19 `unsigned long` (zero-extend `unsigned long` (s~15 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (m~19 `unsigned long`)))
            (definition n~20 `unsigned long` (zero-extend `unsigned long` (i~16 `unsigned int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~6 `ptr<ptr<char>>`)
                  (n~20 `unsigned long`)))))))

----- stderr -----
